tests/records/ill-typed/records-3.stella
language core;
extend with #records;

fn rotate2(p : {x : Nat, y : Bool}) -> {x : Bool, x : Nat} {
  return {x = p.y, x = p.x}
}

fn main(x : Nat) -> {x : Bool, x : Nat} {
  return rotate2({x = x, y = true})
}
